# cpplox

./: ASTprinter.cpp  Makefile  Makefile~  README.md  alloc.cpp  alloc.cpp~  alloc.hpp  alloc.hpp~  alloc.h~  argument_t.cpp  cast_unique_ptr.cpp  clock.hpp  compile_commands.json  deferred_base.hpp  deferred_base.hpp~  deferred_heap.cpp  deferred_heap.cpp~  deferred_heap.hpp  deferred_heap.hpp~  deferred_ptr.hpp  deferred_ptr.hpp~  delete_pointer_vector.hpp  env_ptr.hpp  environment.cpp  environment.hpp  expr.cpp  finally.cpp  finally.hpp  interpreter.hpp  lox.cpp  lox.hpp  lox_callable.hpp  lox_function.cpp  lox_function.hpp  main.cpp  meson.build  parser.hpp  rand.hpp  resolver.hpp  return.hpp  (+9 more)
.clangd/index/: alloc.cpp.0E1A2E4F0AD9AFFB.idx  alloc.hpp.E8358B5DDE22F337.idx  deferred_base.hpp.FDE65B12CFAFB655.idx  deferred_heap.cpp.57F99E13F98610E0.idx  deferred_heap.hpp.30BE67A1DAA497E5.idx  deferred_ptr.hpp.7C5119EAC86C7469.idx  environment.cpp.9BCD5B8AB1A9E308.idx  environment.hpp.0366DE635E715E3A.idx  expr.cpp.CEBCD4F5B63DEA8A.idx  finally.hpp.E8B4E09911699AED.idx  interpreter.hpp.5E99B795EE279C7C.idx  lox.cpp.05479E94B217749F.idx  lox.hpp.D414BC663FD61634.idx  lox_function.hpp.9F025D98A6952467.idx  main.cpp.A51496BA5B0D4BCF.idx  parser.hpp.3BC40407545A3872.idx  resolver.hpp.19D589FF2CBFC780.idx  return.hpp.2647F7698B8BB662.idx  runtime_error.cpp.484B9EC59E7447EE.idx  scanner.cpp.B62077613A5BEC55.idx  scanner.hpp.CB13B87A8B216F87.idx  stmt.hpp.11A9F48B9D4F73EF.idx  token.cpp.5BB825F0C9063845.idx  token_type.hpp.85C5E1456BBF21B5.idx  visitor.hpp.D42A1B20B43A93FA.idx
