project('cpplox', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++14'])

executable('cpplox',
           'scanner.cpp',
           'cast_unique_ptr.cpp',
           'ASTprinter.cpp',
           'lox.cpp',
           'test.cpp',
           'token.cpp',
           'runtime_error.cpp',
           'main.cpp',
           'environment.cpp',
           'expr.cpp',
           install : true)
